# Math-cpp

./: CMakeLists.txt  Makefile
app/: main.cpp
include/: lexer.h
src/Parser/: lexer.cpp
